Fix Tableau Interactive View
Add ngx-tableau

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<div id="vizContainer" class="vizcont" #vizContainer></div>
+<!-- <div id="vizContainer" class="vizcont" #vizContainer></div> -->
+<ngx-tableau [tableauVizUrl]="url"></ngx-tableau>
